--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,18 +2,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 70px;
-    background-color: #efefef;
-    position: sticky;   
-    top: 0;
-    z-index: 100;
+    padding: 10px 0;
+    background-color: #efefef;  
     border-bottom: 1px solid black;
 }
 
 .header__left {
     display: flex;
     align-items: center;
-    margin-left: 10px;
+    margin-left: 60px;
     margin-right: 10px;
 }
 
